fixed buttons overlaping with sidebar in responsive mode

--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -149,7 +149,7 @@
         border-bottom-left-radius: 0;
         left: 0;
         top: 70px;
-        z-index: 2;
+        z-index: 3;
         .close {
           display: inline-block;
         }
